--- a/Breadcrumb/index.html
+++ b/Breadcrumb/index.html
@@ -5,7 +5,7 @@
     <link
       href="https://fonts.googleapis.com/css?family=Catamaran:100|Pontano+Sans|Ruda:900"
       rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="/breadcrumbs.css" />
+    <link rel="stylesheet" type="text/css" href="breadcrumb.css" />
   </head>
 
   <body>
