--- a/ReferencePage/index.html
+++ b/ReferencePage/index.html
@@ -225,6 +225,56 @@
                 >https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table</a
               >
             </li>
+            <div class="flex-ref">
+    <h1>Using Flexbox in HTML &amp; CSS</h1>
+    <div class="container-flex">
+      <div class="box">
+        1. Define a parent element in HTML where you wish to apply flexbox
+        styling rules
+      </div>
+
+      <div class="box">
+        2. Use a CSS rule to apply <button>display: flex;</button> to the parent
+        element
+      </div>
+      <div class="box">
+        3. Consider the main axis (horizontal) and cross
+        axis (vertical)
+      </div>
+      <div class="box">
+        4. Use <button>justify-content:</button> within the parent element rules to
+        place content on the main axis
+      </div>
+      <div class="box">
+        5. Use <button>align-items:</button> within the parent element rules to place
+        content on the cross axis
+      </div>
+      <div class="box">
+        6. Place items on each axis using one of three values:
+        <button>flex-start;</button>, <button>flex-end;</button> and
+        <button>center;</button>
+      </div>
+      <div class="box">
+        7. Put space around child containers using a
+        <button>justify-content:</button> value of
+        <button>space-between;</button>, <button>space-around;</button> and
+        <button>space-evenly;</button>
+      </div>
+      <div class="box">
+        8. Use <button>flex-direction</button> to control the direction of the
+        main axis which will influence previously mentioned flex properties
+      </div>
+      <div class="box">
+        9. The default setting of <button>flex-direction</button> is set to
+        <button>row</button>, or use <button>column</button> for vertical layout.
+      </div>
+      <div class="box">
+        10. Use <button>flex-wrap:</button> with a value of
+        <button>wrap;</button> to wrap overflowing boxes, or
+        <button>nowrap;</button> to allow elements to shrink-to-fit screen
+      </div>
+    </div>
+  </div>
           </ul>
         </td>
       </div>
